[project]
name = "pump-not-fun"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "aiohttp>=3.11.11",
    "apscheduler>=3.10.4",
    "asyncpg>=0.30.0",
    "base58>=2.1.1",
    "brotli>=1.1.0",
    "datetime>=5.5",
    "fake-useragent>=2.2.0",
    "fastapi>=0.115.8",
    "greenlet>=3.1.1",
    "pandas>=2.2.3",
    "pyngrok>=7.2.3",
    "pyrotgfork>=2.2.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "solana>=0.36.2",
    "solders>=0.23.0",
    "sqlalchemy>=2.0.37",
    "tgcrypto>=1.2.5",
    "tls-client>=1.0.1",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.38.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*", "config*", "database*"]
exclude = ["tests*", "scripts*"]
