[metadata]
name = pump-not-fun
version = 0.1.1
author = TUF Coding
description = Solana Telegram Bot for token monitoring
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/espinozasenior/pump-not-fun
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = .
packages = find:
install_requires =
    pyrotgfork>=2.2.4
    solana>=0.36.2
    solders>=0.23.0
    apscheduler>=3.10.4
    python-dotenv>=1.0.1
    fastapi>=0.115.8
    uvicorn>=0.34.0
    pandas>=2.2.3
    aiohttp>=3.11.11

[options.entry_points]
console_scripts =
    pump-bot = main:main
